[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/parallax_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/lenioboy_overlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/leaderboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/menu.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/music/freesound_very_lush_and_swag_loop_by_dpren.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sprites/ui/space_bar.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/ui/escape.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/ui/lenihop_pix_logo.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/kenney_pixel.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/sounds/fxs/game_startbyplasterbrain.ogg" type="AudioStream" id=11]
[ext_resource path="res://resources/lenioboy_theme.tres" type="Theme" id=18]

[sub_resource type="Animation" id=2]
resource_name = "blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Play:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "blink_fast"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Play:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../../AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "method"
tracks/2/path = NodePath("../../../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_game"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../MainMenuColorRect:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.880571, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFontData" id=11]
font_path = "res://assets/fonts/kenney_pixel.ttf"

[sub_resource type="DynamicFont" id=12]
size = 19
outline_size = 2
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://assets/fonts/kenney_pixel.ttf"

[sub_resource type="DynamicFont" id=17]
size = 21
outline_size = 1
outline_color = Color( 0.388235, 0.388235, 0.388235, 1 )
font_data = SubResource( 16 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
font_data = ExtResource( 10 )

[sub_resource type="InputEventAction" id=4]
action = "ui_accept"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/fonts/kenney_pixel.ttf"

[sub_resource type="DynamicFont" id=9]
outline_size = 1
font_data = SubResource( 8 )

[sub_resource type="InputEventAction" id=6]
action = "ui_cancel"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="LBOverlay" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/MainMenu"]
root_node = NodePath("../MarginContainer/VBoxContainer")
autoplay = "blink"
anims/blink = SubResource( 2 )
anims/blink_fast = SubResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 39.0
margin_top = 34.0
margin_right = -41.0
margin_bottom = -37.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
margin_right = 270.0
margin_bottom = 149.0
custom_constants/separation = 6
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
margin_right = 270.0
margin_bottom = 97.0
rect_min_size = Vector2( 0.104, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 270.0
margin_bottom = 121.0
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 133.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Current Player: "
align = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 137.0
margin_right = 270.0
margin_bottom = 18.0
rect_clip_content = false
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 17 )
bbcode_enabled = true
bbcode_text = "[wave][rainbow freq=1.5 sat=0.5]chemscobra[/rainbow][/wave]"
meta_underlined = false
tab_size = 0
text = "chemscobra"
fit_content_height = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 270.0
margin_bottom = 149.0

[node name="Play" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 158.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 22 )
hint_tooltip = "Press Spacebar to Play"
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 20
custom_fonts/font = SubResource( 3 )
shortcut_in_tooltip = false
action_mode = 0
shortcut = SubResource( 5 )
text = "Play"
icon = ExtResource( 7 )
flat = true
align = 0

[node name="Leaderboard" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 162.0
margin_right = 270.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/hseparation = 15
custom_fonts/font = SubResource( 9 )
action_mode = 0
shortcut = SubResource( 7 )
text = "Leaderboard"
icon = ExtResource( 8 )
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/MainMenu"]
stream = ExtResource( 11 )

[node name="AcceptDialog" type="AcceptDialog" parent="CanvasLayer/MainMenu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 59.0
margin_top = -23.0
margin_right = -60.0
margin_bottom = 45.0
theme = ExtResource( 18 )
window_title = "Enter Your Name"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/AcceptDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -51.0

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/MainMenu/AcceptDialog/VBoxContainer"]
margin_right = 215.0
margin_bottom = 35.0
text = "chemscobra"
align = 1
max_length = 12
placeholder_text = "enter_yourName"
caret_blink = true
caret_blink_speed = 0.7

[node name="MainMenuColorRect" type="ColorRect" parent="CanvasLayer/MainMenu"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Leaderboard" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="meta_clicked" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer2/RichTextLabel" to="." method="on_rich_text_label_meta_clicked"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/Play" to="." method="on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/Leaderboard" to="." method="on_leaderboard_pressed"]
[connection signal="confirmed" from="CanvasLayer/MainMenu/AcceptDialog" to="." method="on_dialog_confirmed"]
[connection signal="text_changed" from="CanvasLayer/MainMenu/AcceptDialog/VBoxContainer/LineEdit" to="." method="on_line_edit_text_changed"]
